chore: overview metrics
